# cookiecutter-niicck-django

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  setup.cfg  tailwind.config.js
cookiecutter_niicck_django/: asgi.py  settings.py  wsgi.py
cookiecutter_niicck_django/base/: apps.py  urls.py  views.py
cookiecutter_niicck_django/base/templates/: 404.html  base.html  home.html
cookiecutter_niicck_django/users/: apps.py
cookiecutter_niicck_django/users/migrations/: 0001_initial.py
docker/: django.Dockerfile  docker-compose.local.yml  docker-compose.troubleshooting.yml  docker-compose.yml  docker-entrypoint.sh  docker.md
docker/artifacts/: requirements.txt
docker/compose/: docker-compose.local.yml  docker-compose.troubleshooting.yml  docker-compose.yml
docker/django/: django.Dockerfile
docker/django/scripts/: start.sh
docker/images/node/: node.Dockerfile
docker/node/: node.Dockerfile
docker/node/scripts/: entrypoint.sh
docker/scripts/: docker-entrypoint.sh  docker-start.sh  wait_for_db.py
docs/: development_guide.md  docker.md  static_assets.md  styles.md
niicck_django_cookiecutter/: asgi.py  settings.py  wsgi.py
tools/: .env-sample  activate.sh  build_requirements.py  migrations_check.sh  run_undockerized_app.sh
utils/: .env-sample  build_requirements_txt.sh  migrations_check.sh  template.env
utils/pre_commit/: build_requirements_txt.sh  migrations_check.sh
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/docker/: docker-compose.local.yml  docker-compose.troubleshooting.yml  docker-compose.yml
{{cookiecutter.project_slug}}/docker/artifacts/: requirements.txt
{{cookiecutter.project_slug}}/docker/scripts/: docker-entrypoint.sh  docker-start.sh
{{cookiecutter.project_slug}}/utils/: .env-sample  build_requirements_txt.sh
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  wsgi.py
{{replace_me_cookiecutter}}/: asgi.py  settings.py  wsgi.py
