[tool.poetry]
name = "niicck_django_cookiecutter"
version = "0.1.0"
description = ""
authors = ["Niicck <niicck@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "niicck_django_cookiecutter"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
psycopg2 = "^2.9.5"
django-extensions = "^3.2.1"
ipython = "^8.6.0"
gunicorn = "^20.1.0"
python-decouple = "^3.6"
django-configurations = "^2.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.8.0"
flake8 = "^5.0.4"
djangorestframework-stubs = "^1.8.0"
django-stubs = "^1.13.0"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
